Prueba Block de Notas.txt
Microsoft Windows [Versión 10.0.26100.7171]
(c) Microsoft Corporation. Todos los derechos reservados.

C:\Users\miria>javac
Usage: javac <options> <source files>
where possible options include:
  @<filename>                  Read options and filenames from file
  -Akey[=value]                Options to pass to annotation processors
  --add-modules <module>(,<module>)*
        Root modules to resolve in addition to the initial modules,
        or all modules on the module path if <module> is ALL-MODULE-PATH.
  --boot-class-path <path>, -bootclasspath <path>
        Override location of bootstrap class files
  --class-path <path>, -classpath <path>, -cp <path>
        Specify where to find user class files and annotation processors
  -d <directory>               Specify where to place generated class files
  -deprecation
        Output source locations where deprecated APIs are used
  --enable-preview
        Enable preview language features.
        To be used in conjunction with either -source or --release.
  -encoding <encoding>         Specify character encoding used by source files
  -endorseddirs <dirs>         Override location of endorsed standards path
  -extdirs <dirs>              Override location of installed extensions
  -g                           Generate all debugging info
  -g:{lines,vars,source}       Generate only some debugging info
  -g:none                      Generate no debugging info
  -h <directory>
        Specify where to place generated native header files
  --help, -help, -?            Print this help message
  --help-extra, -X             Print help on extra options
  -implicit:{none,class}
        Specify whether to generate class files for implicitly referenced files
  -J<flag>                     Pass <flag> directly to the runtime system
  --limit-modules <module>(,<module>)*
        Limit the universe of observable modules
  --module <module>(,<module>)*, -m <module>(,<module>)*
        Compile only the specified module(s), check timestamps
  --module-path <path>, -p <path>
        Specify where to find application modules
  --module-source-path <module-source-path>
        Specify where to find input source files for multiple modules
  --module-version <version>
        Specify version of modules that are being compiled
  -nowarn                      Generate no warnings
  -parameters
        Generate metadata for reflection on method parameters
  -proc:{none,only,full}
        Control whether annotation processing and/or compilation is done.
  -processor <class1>[,<class2>,<class3>...]
        Names of the annotation processors to run;
        bypasses default discovery process
  --processor-module-path <path>
        Specify a module path where to find annotation processors
  --processor-path <path>, -processorpath <path>
        Specify where to find annotation processors
  -profile <profile>
        Check that API used is available in the specified profile.
        This option is deprecated and may be removed in a future release.
  --release <release>
        Compile for the specified Java SE release.
        Supported releases:
            8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24
  -s <directory>               Specify where to place generated source files
  --source <release>, -source <release>
        Provide source compatibility with the specified Java SE release.
        Supported releases:
            8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24
  --source-path <path>, -sourcepath <path>
        Specify where to find input source files
  --system <jdk>|none          Override location of system modules
  --target <release>, -target <release>
        Generate class files suitable for the specified Java SE release.
        Supported releases:
            8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24
  --upgrade-module-path <path>
        Override location of upgradeable modules
  -verbose                     Output messages about what the compiler is doing
  --version, -version          Version information
  -Werror                      Terminate compilation if warnings occur


C:\Users\miria>..
".." no se reconoce como un comando interno o externo,
programa o archivo por lotes ejecutable.

C:\Users\miria>cd..

C:\Users>cd..

C:\>cd..

C:\>cd..

C:\>cd practicas

C:\practicas>
C:\practicas>
C:\practicas>int
"int" no se reconoce como un comando interno o externo,
programa o archivo por lotes ejecutable.

C:\practicas>dir
 El volumen de la unidad C es OS
 El número de serie del volumen es: 6A41-32D2

 Directorio de C:\practicas

24/11/2025  04:25 p. m.    <DIR>          .
14/11/2025  04:50 p. m.               115 Prueba.jar
24/11/2025  04:27 p. m.               110 Prueba.java
               2 archivos            225 bytes
               1 dirs  77,537,468,416 bytes libres

C:\practicas>javac Prueba.java
Prueba.java:3: error: ',', ')', or '[' expected
        public static void main(String[] args{
                                             ^
1 error

C:\practicas>javac Prueba.java

C:\practicas>dir
 El volumen de la unidad C es OS
 El número de serie del volumen es: 6A41-32D2

 Directorio de C:\practicas

24/11/2025  04:30 p. m.    <DIR>          .
24/11/2025  04:30 p. m.               416 Prueba.class
14/11/2025  04:50 p. m.               115 Prueba.jar
24/11/2025  04:30 p. m.               111 Prueba.java
               3 archivos            642 bytes
               1 dirs  77,352,914,944 bytes libres

C:\practicas>javac Prueba.jar
error: Class names, 'Prueba.jar', are only accepted if annotation processing is explicitly requested
1 error

C:\practicas>dir
 El volumen de la unidad C es OS
 El número de serie del volumen es: 6A41-32D2

 Directorio de C:\practicas

24/11/2025  04:30 p. m.    <DIR>          .
24/11/2025  04:30 p. m.               416 Prueba.class
14/11/2025  04:50 p. m.               115 Prueba.jar
24/11/2025  04:30 p. m.               111 Prueba.java
               3 archivos            642 bytes
               1 dirs  77,810,245,632 bytes libres

C:\practicas>dir2
"dir2" no se reconoce como un comando interno o externo,
programa o archivo por lotes ejecutable.

C:\practicas>dir
 El volumen de la unidad C es OS
 El número de serie del volumen es: 6A41-32D2

 Directorio de C:\practicas

24/11/2025  04:30 p. m.    <DIR>          .
24/11/2025  04:30 p. m.               416 Prueba.class
14/11/2025  04:50 p. m.               115 Prueba.jar
24/11/2025  04:30 p. m.               111 Prueba.java
               3 archivos            642 bytes
               1 dirs  77,809,549,312 bytes libres

C:\practicas>dirs
"dirs" no se reconoce como un comando interno o externo,
programa o archivo por lotes ejecutable.

C:\practicas>java Prueba
Hola Mundo

C:\practicas>
C:\practicas>